--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,5 +1,42 @@
 @import "tailwindcss";
 
+@property --border-angle {
+  inherits: false;
+  initial-value: 0deg;
+  syntax: "<angle>";
+}
+
 * {
   font-family: "Inter", sans-serif;
+}
+
+.text-xxs {
+  font-size: 0.625rem;
+}
+
+.shadow-shape {
+  box-shadow:
+    0px 8px 8px rgba(0, 0, 0, 0.1),
+    0px 4px 4px rgba(0, 0, 0, 0.1),
+    0px 2px 2px rgba(0, 0, 0, 0.1),
+    0px 0px 0px 1px rgba(0, 0, 0, 0.1),
+    inset 0px 0px 0px 1px rgba(255, 255, 255, 0.03),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.03);
+}
+
+.shadow-shape-content {
+  box-shadow:
+    0px 0px 0px 1px rgba(0, 0, 0, 0.25),
+    inset 0px 1px 0px rgba(255, 255, 255, 0.02),
+    inset 0px 0px 0px 1px rgba(255, 255, 255, 0.02);
+}
+
+@keyframes border-rotate {
+  to {
+    --border-angle: 360deg;
+  }
+}
+
+.animate-border {
+  animation: border-rotate 2s linear infinite;
 }
